Add graphs to report

--- a/Latex Document/Thesis.tex
+++ b/Latex Document/Thesis.tex
@@ -609,6 +609,37 @@ Looking at Feature XXX, it can be seen that the R\textsuperscript{2} value is wi
 
 
 
+
+
+
+\begin{figure}[H]
+    \centering
+		\begin{subfigure}{.33\textwidth}
+		  \centering
+    			\includegraphics[width=.9\linewidth]{figures/Models_Signal12Feature1.eps}
+		  	\caption{Feature values}
+		  	\label{fig:Models_Signal12Feature1}
+		\end{subfigure}%
+		\begin{subfigure}{.33\textwidth}
+		  \centering
+ 		   	\includegraphics[width=.9\linewidth]{figures/Models_Signal12Feature1_Linear1.eps}
+		  	\caption{Clearance vs Shape Factor}
+		  	\label{fig:Models_Signal12Feature1_Linear1}
+		\end{subfigure}
+		\begin{subfigure}{.33\textwidth}
+		  \centering
+ 		   	\includegraphics[width=.9\linewidth]{figures/Models_Signal12Feature1_Linear2.eps}
+		  	\caption{Clearance v Skewness}
+		  	\label{fig:Models_Signal12Feature1_Linear2}
+		\end{subfigure}
+    \caption{Signal 12 21:36 Actual force Feature 1}
+    \label{fig:Models_Signal12Feature1_Caption}
+\end{figure}
+
+
+
+
+
 \subsection{Signal vs Signal Models}
 \Cref{fig:SignalVsSignalFeatureFreq3} shows 
 \begin{figure}[H]
